--- a/iugonet/gui_udas_doc_list.html
+++ b/iugonet/gui_udas_doc_list.html
@@ -11,7 +11,7 @@ This page was created by the IDL library routine
 <CODE>mk_html_help2</CODE>.
 <br>
 <P>
-<STRONG>Last modified: </STRONG>Mon Jun 10 10:37:11 2013.<P>
+<STRONG>Last modified: </STRONG>Mon Aug 19 05:30:10 2013.<P>
  
 <HR>
  
@@ -114,6 +114,8 @@ A. Shinbori, 11/05/2012
 A. Shinbori, 12/06/2012
 A. Shinbori, 24/10/2012
 A. Shinbori, 14/12/2012
+A. Shinbori, 08/07/2013
+Y.-M. Tanaka, 16/08/2013
 
 </PRE><P>
 <STRONG>(See <A href="gui/iug_ui_load_data.pro">iugonet/gui/iug_ui_load_data.pro</A>)</STRONG><P>
@@ -148,6 +150,7 @@ Y.-M. Tanaka,15/06/2012
 A. Shinbori, 24/10/2012
 A. Shinbori, 14/12/2012
 A. Shinbori, 18/02/2013
+Y.-M. Tanaka, 16/08/2013
 </PRE><P>
 <STRONG>(See <A href="gui/iug_ui_load_data_load_pro.pro">iugonet/gui/iug_ui_load_data_load_pro.pro</A>)</STRONG><P>
 <HR>
