--- a/iugonet/tools/statistical_package_udas_doc_list.html
+++ b/iugonet/tools/statistical_package_udas_doc_list.html
@@ -11,7 +11,7 @@ This page was created by the IDL library routine
 <CODE>mk_html_help2</CODE>.
 <br>
 <P>
-<STRONG>Last modified: </STRONG>Mon Jun 10 10:37:11 2013.<P>
+<STRONG>Last modified: </STRONG>Mon Aug 19 05:30:10 2013.<P>
  
 <HR>
  
@@ -21,11 +21,11 @@ This page was created by the IDL library routine
 <H1>iugonet/tools/statistical_package</H1>
 <LI><A HREF="#DIFFERENCE_TEST">DIFFERENCE_TEST</A>
 <LI><A HREF="#MANN_WHITNEY_TEST">MANN_WHITNEY_TEST</A>
-<br>2データ間の分布の差を検定する。　母集団の分布は問わない　
+<br>Test the difference for distributions between two data sets.
 <LI><A HREF="#NORMALITY_TEST">NORMALITY_TEST</A>
 <LI><A HREF="#S_TRANS">S_TRANS</A>
 <LI><A HREF="#TREND_TEST">TREND_TEST</A>
-<br>データの傾向性を検定。
+<br>Test the trend of the data.
 <LI><A HREF="#UCHANGE_POINT_CHECKER">UCHANGE_POINT_CHECKER</A>
 <br>Identify the change point of time-serise data.
 <LI><A HREF="#UCROSS_COR">UCROSS_COR</A>
@@ -33,7 +33,7 @@ This page was created by the IDL library routine
 <LI><A HREF="#UDATA_INTERPOLATION">UDATA_INTERPOLATION</A>
 <br>Perform the data interpolation for two time-serise data.
 <LI><A HREF="#　　UDIFFERENCE_TEST">　　UDIFFERENCE_TEST</A>
-<br>平均値検定を行うプログラム。
+<br>Perform the difference test for two pairs of time-series data sets and
 <LI><A HREF="#USPEC_COH">USPEC_COH</A>
 <br>Calculate the coherence and phase difference between two time-serise data.
 <LI><A HREF="#USTRANS_PWRSPC">USTRANS_PWRSPC</A>
@@ -41,7 +41,7 @@ This page was created by the IDL library routine
 <LI><A HREF="#UTREND_TEST">UTREND_TEST</A>
 <br>Test whether there is a significant trend of time-serise data or not.
 <LI><A HREF="#WELCH_TEST">WELCH_TEST</A>
-<br>2つのデータ間の平均値が同一かを検定する。仮定は両分布とも正規分布かつ異分散。
+<br>Test whether two pairs of average value of time series data is the same or.
 <br>
 </UL><P>
 <HR>
@@ -80,24 +80,27 @@ NAME:
   Mann_Whitney_test
   
 PURPOSE:
-   2データ間の分布の差を検定する。　母集団の分布は問わない　
+   Test the difference for distributions between two data sets.
+   Distribution of the population does not matter.
    
 KEYWORDS:
   sl:significance level 
      If you don't set sl, sl = 0.05 
   mv:missing value
      If you don't set mv, mv = only NaN 
+  z:Statistical test value.
+  Z0:Critical value of the standard normal distribution at significance level
+  c:Comment
 
-結果は分布が同じと判定されれば「3」、異なっていれば「2」を返す。
-z:検定統計量
-Z0:有意水準における標準正規分布の臨界値
-c:コメント
-
+NOTES:
+  The output result is 3 or 2 if both distributions is same or different.
+  
 CODE:
 R. Hamaguchi, 13/02/2012.
 
 MODIFICATIONS:
 A. Shinbori, 01/05/2013.
+A. Shinbori, 10/07/2013.
 
 ACKNOWLEDGEMENT:
  $LastChangedBy:  $
@@ -114,25 +117,33 @@ ACKNOWLEDGEMENT:
 <A HREF="#S_TRANS">[Next Routine]</A>
 <A HREF="#ROUTINELIST">[List of Routines]</A>
 <PRE>
-name
+NAME
  normality_test
-purpose
- カイ二乗適合度検定を用いて、正規分布に従っているか検定する
-syntax
+
+PURPOSE
+ Test whether time-series data obey the normal distribution or not 
+ with the chi-square goodness-of-fit test. 
+ 
+SYNTAX
  result=normality_test(x,sl=sl,mv=mv)
-Keywords:
-  x:検定を行う観測データ
-  sl:有意水準
-     入力しなければ５％で検定
-  mv:欠損値
-     入力しなければNaNのみを欠損値として処理;
-結果は、正規分布に従っている場合は0、従っていない場合は1を返す
+ 
+KEYWORDS:
+  x:Input data
+  sl:Significant level
+     The default is 0.05.
+  mv:Missing value.
+     If not set, only the NaN value is dealt with.
+
+NOTES:
+  Output the value '0' if the input data obey the normal distribution and
+  '1' if not obey.
 
 CODE:
 R. Hamaguchi, 13/02/2012.
 
 MODIFICATIONS:
 A. Shinbori, 01/05/2013.
+A. Shinbori, 10/07/2013.
 
 ACKNOWLEDGEMENT:
  $LastChangedBy:  $
@@ -212,19 +223,20 @@ ACKNOWLEDGEMENT:
 NAME:
   trend_test
 PURPOSE:
-  データの傾向性を検定。
+  Test the trend of the data.
 SYNTAX:
   trend_test,y
 KEYWORDS:
-    y:データ
-    Z:統計検定量
-    sl:有意水準指定用 (Default is 0.05)
+    y:Input data
+    Z:Statistical test value.
+    sl:Significant level. The default is 0.05.
 
 CODE:
  R. Hamaguchi, 17/01/2013.
 
 MODIFICATIONS:
  A. Shinbori, 01/05/2013.
+ A. Shinbori, 10/07/2013.
  
 ACKNOWLEDGEMENT:
  $LastChangedBy:  $
@@ -493,21 +505,31 @@ ACKNOWLEDGEMENT:
 NAME:
   welch_test
 PURPOSE:
-  2つのデータ間の平均値が同一かを検定する。仮定は両分布とも正規分布かつ異分散。
+  Test whether two pairs of average value of time series data is the same or. 
+  It is assumed that both distibutions of the data sets are normal distribution 
+  and have different variance.
+  
 SYNTAX:
-  result=Welch_test(x,y,sl=**,mv=**)
+  result=Welch_test(x,y,sl=sl,mv=mv)
+
 KEYWORDS:
-  sl:有意水準。設定しなければ5%で検定。
-  mv:欠損値。設定しなければNaNのみを処理する。
-結果は同一ならば「1」を、異なれば「0」を返す。
-z:検定統計量
-t_sl:有意水準におけるt分布の臨界値
+  sl:Significant level. 
+     The default is 0.05.
+  mv:Missing value.
+     If not set, Only the NaN value is dealt with.
+  z:Statistical test value
+  t_sl:Critical value of t-distribution in the significant level.
+
+NOTES:
+  The test result is output as a value of 1 and 0 if the average value is the same
+  and different, respectively.
 
 CODE:
  R. Hamaguchi, 13/12/2012.
 
 MODIFICATIONS:
  A. Shinbori, 01/05/2013.
+ A. Shinbori, 10/07/2013.
  
 ACKNOWLEDGEMENT:
  $LastChangedBy:  $
@@ -527,24 +549,32 @@ NAME:
 　　udifference_test
 
 PURPOSE:
-  平均値検定を行うプログラム。
-  χ二乗検定によって正規分布との適合を検定する。
-  どちらも正規分布に従う場合はWelch検定
-  どちらかが正規分布に従わない場合はマンホイットニー検定のみを用いる。
+  Perform the difference test for two pairs of time-series data sets and
+  test the fit of a normal distribution by χ-square test
+  If both data sets obey the normal distribution, the Welch test is applied.
+  If both data sets do not obey the normal distribution, 
+  only the Mann-Whitney test is used.
   
 SYNTAX:
-  difference_test,vname1,vname2,sl=**
+  difference_test,vname1,vname2,sl=sl,test_sel=test_sel
   
 KEYWORDS:
-  result:検定結果を'0'：ウェルチ検定使用-判定は異,'1'：ウェルチ検定使用-判定は同,'2'：マンホイットニー-異,'3'：マンホイットニー-同、で返す
-  sl:有意水準。指定しない場合はsl=0.05で検定。
-  test_sel：行う検定を指定。'2'はマンホイットニー検定、'1'はウェルチ検定、'0'はχ二乗検定によって正規分布との適合を検定
+  result:Test result.
+         The values '0' and '1' mean that the judgement of the Welch test is different
+         and same, respectively. Moreover, the values '2' and '3' mean that the judgement 
+         of the Mann-Whitney test is different and same, respectively.
+  sl:Significant level. 
+     The default is 0.05.
+  test_sel：Specify the test to be performed. The value '2' is the Mann-Whitney test, 
+           '1' is the Welch test, and '0' is to test the fit of a normal distribution 
+           by χ-square test
   
 CODE:
 R. Hamaguchi, 13/02/2012.
 
 MODIFICATIONS:
 A. Shinbori, 01/05/2013.
+A. Shinbori, 10/07/2013.
 
 ACKNOWLEDGEMENT:
  $LastChangedBy:  $
