Modified ReadMe.txt and HTML cocuments.

--- a/iugonet/load_udas_doc_list.html
+++ b/iugonet/load_udas_doc_list.html
@@ -11,7 +11,7 @@ This page was created by the IDL library routine
 <CODE>mk_html_help2</CODE>.
 <br>
 <P>
-<STRONG>Last modified: </STRONG>Mon Aug 19 05:30:10 2013.<P>
+<STRONG>Last modified: </STRONG>Mon Aug 19 17:16:17 2013.<P>
  
 <HR>
  
@@ -602,7 +602,8 @@ MODIFICATIONS:
  A. Shinbori, 31/01/2012.
  A. Shinbori, 17/12/2012.
  A. Shinbori, 08/07/2013.
- 
+ A. Shinbori, 19/08/2013.
+  
 ACKNOWLEDGEMENT:
  $LastChangedBy:  $
  $LastChangedDate:  $
@@ -660,6 +661,7 @@ MODIFICATIONS:
  A. Shinbori, 06/10/2011.
  A. Shinbori, 31/01/2012.
  A. Shinbori, 01/08/2013.
+ A. Shinbori, 18/08/2013.
  
 ACKNOWLEDGEMENT:
  $LastChangedBy:  $
@@ -716,6 +718,7 @@ MODIFICATIONS:
  A. Shinbori, 31/01/2012.
  A. Shinbori, 17/12/2012.
  A. Shinbori, 08/07/2013.
+ A. Shinbori, 18/08/2013.
   
 ACKNOWLEDGEMENT:
  $LastChangedBy:  $
@@ -775,6 +778,7 @@ MODIFICATIONS:
  A. Shinbori, 31/01/2012.
  A. Shinbori, 17/12/2012.
  A. Shinbori, 01/08/2013.
+ A. Shinbori, 18/08/2013.
  
 ACKNOWLEDGEMENT:
  $LastChangedBy:  $
@@ -831,6 +835,7 @@ MODIFICATIONS:
  A. Shinbori, 01/12/2011.
  A. Shinbori, 31/01/2012.
  A. Shinbori, 17/12/2012.
+ A. Shinbori, 18/08/2013.
  
 ACKNOWLEDGEMENT:
  $LastChangedBy:  $
@@ -890,7 +895,8 @@ MODIFICATIONS:
  A. Shinbori, 31/01/2012.
  A. Shinbori, 17/12/2012.
  A. Shinbori, 01/08/2013.
-  
+ A. Shinbori, 18/08/2013.
+   
 ACKNOWLEDGEMENT:
  $LastChangedBy:  $
  $LastChangedDate:  $
@@ -1004,6 +1010,7 @@ MODIFICATIONS:
  A. Shinbori, 31/01/2012.
  A. Shinbori, 17/12/2012.
  A. Shinbori, 01/08/2013.
+ A. Shinbori, 18/08/2013.
  
 ACKNOWLEDGEMENT:
  $LastChangedBy:  $
