Modified HTML document files.

--- a/iugonet/gui_udas_doc_list.html
+++ b/iugonet/gui_udas_doc_list.html
@@ -11,7 +11,7 @@ This page was created by the IDL library routine
 <CODE>mk_html_help2</CODE>.
 <br>
 <P>
-<STRONG>Last modified: </STRONG>Mon Aug 19 17:16:17 2013.<P>
+<STRONG>Last modified: </STRONG>Thu Dec 26 13:09:33 2013.<P>
  
 <HR>
  
@@ -116,6 +116,9 @@ A. Shinbori, 24/10/2012
 A. Shinbori, 14/12/2012
 A. Shinbori, 08/07/2013
 Y.-M. Tanaka, 16/08/2013
+A. Shinbori, 25/09/2013
+A. Shinbori, 09/10/2013
+A. Shinbori, 27/11/2013
 
 </PRE><P>
 <STRONG>(See <A href="gui/iug_ui_load_data.pro">iugonet/gui/iug_ui_load_data.pro</A>)</STRONG><P>
