Updated HTML documents.

--- a/_udas_doc.html
+++ b/_udas_doc.html
@@ -2,17 +2,17 @@
 <html>
  
 <head>
-<TITLE>Help for udas_3_00_3</TITLE>
+<TITLE>Help for udas_s1_00_1</TITLE>
 </head>
  
 <body>
-<H2>Help for udas_3_00_3</H2>
+<H2>Help for udas_s1_00_1</H2>
 <P>
 This page was created by the IDL library routine 
 <CODE>mk_html_help2</CODE>.
 <br>
 <P>
-<STRONG>Last modified: </STRONG>Fri Dec 27 11:43:59 2013.<P>
+<STRONG>Last modified: </STRONG>Tue Oct 28 21:48:08 2014.<P>
  
 <HR>
  
@@ -53,6 +53,8 @@ This page was created by the IDL library routine
 <LI><A HREF="iugonet/examples_udas_doc_list.html">iugonet/examples</A>
 <LI><A HREF="iugonet/gui_udas_doc_list.html">iugonet/gui</A>
 <LI><A HREF="iugonet/load_udas_doc_list.html">iugonet/load</A>
+<LI><A HREF="iugonet/plot_udas_doc_list.html">iugonet/plot</A>
+<LI><A HREF="iugonet/plot/map2d_udas_doc_list.html">iugonet/plot/map2d</A>
 <LI><A HREF="iugonet/tools_udas_doc_list.html">iugonet/tools</A>
 <LI><A HREF="iugonet/tools/mddb_udas_doc_list.html">iugonet/tools/mddb</A>
 <LI><A HREF="iugonet/tools/statistical_package_udas_doc_list.html">
@@ -86,6 +88,10 @@ FILTER">FILTER</A>
 FILTER_WINDOW">FILTER_WINDOW</A>
 <br>This function returns a desired filter window of desired width.
 <A NAME="LIST_G">
+<LI><A HREF="iugonet/plot_udas_doc_list.html#GET_DATA_ASI_NIPR">
+GET_DATA_ASI_NIPR</A>
+<LI><A HREF="iugonet/plot_udas_doc_list.html#GET_DATA_THMASI">GET_DATA_THMASI
+</A>
 <LI><A HREF="iugonet/tools_udas_doc_list.html#GET_PULSECODE_EISCAT">
 GET_PULSECODE_EISCAT</A>
 <LI><A HREF="iugonet/tools/mddb_udas_doc_list.html#GET_SOURCE_URL_LIST">
@@ -95,6 +101,12 @@ GET_SOURCE_URL_LIST</A>
 GUI_ACKNOWLEDGEMENT</A>
 <br>Show data policy for IUGONET data on GUI
 <A NAME="LIST_I">
+<LI><A HREF="iugonet/examples_udas_doc_list.html#IUG_CRIB_ASI_NIPR">
+IUG_CRIB_ASI_NIPR</A>
+<LI><A HREF="iugonet/examples_udas_doc_list.html#IUG_CRIB_ASK_NIPR">
+IUG_CRIB_ASK_NIPR</A>
+<LI><A HREF="iugonet/examples_udas_doc_list.html#IUG_CRIB_AVON_VLFB">
+IUG_CRIB_AVON_VLFB</A>
 <LI><A HREF="iugonet/examples_udas_doc_list.html#IUG_CRIB_AWS_RISH">
 IUG_CRIB_AWS_RISH</A>
 <LI><A HREF="iugonet/examples_udas_doc_list.html#IUG_CRIB_BLR_RISH">
@@ -126,6 +138,8 @@ IUG_CRIB_KYUSHUGCM</A>
 </A>
 <LI><A HREF="iugonet/examples_udas_doc_list.html#IUG_CRIB_LTR_RISH">
 IUG_CRIB_LTR_RISH</A>
+<LI><A HREF="iugonet/examples_udas_doc_list.html#IUG_CRIB_MAP2D">IUG_CRIB_MAP2D
+</A>
 <LI><A HREF="iugonet/examples_udas_doc_list.html#IUG_CRIB_MDDB">IUG_CRIB_MDDB
 </A>
 <LI><A HREF="iugonet/examples_udas_doc_list.html#IUG_CRIB_METEOR_NIPR">
@@ -151,9 +165,15 @@ IUG_GET_OBSINFO</A>
 </A>
 <br>Transformation of geomagnetic field into XYZ (geographical) coordinates.
 <LI><A HREF="iugonet/gui_udas_doc_list.html#IUG_INIT">IUG_INIT</A>
+<LI><A HREF="iugonet/load_udas_doc_list.html#IUG_LOAD_ASI_NIPR">
+IUG_LOAD_ASI_NIPR</A>
+<br>Loads the all-sky imager data obtained by NIPR.
 <LI><A HREF="iugonet/load_udas_doc_list.html#IUG_LOAD_ASK_NIPR">
 IUG_LOAD_ASK_NIPR</A>
-<br>Loads keogram data obtained with AWI by NIPR.
+<br>Loads the keogram of all-sky imager data obtained by NIPR.
+<LI><A HREF="iugonet/load_udas_doc_list.html#IUG_LOAD_AVON_VLFB">
+IUG_LOAD_AVON_VLFB</A>
+<br>To load AVON/VLF-B data
 <LI><A HREF="iugonet/load_udas_doc_list.html#IUG_LOAD_AWS_ID">IUG_LOAD_AWS_ID
 </A>
 <br>Queries the RISH server for the surface meterology data taken by the automatic weather
@@ -169,6 +189,9 @@ IUG_LOAD_AWS_RISH</A>
 <LI><A HREF="iugonet/load_udas_doc_list.html#IUG_LOAD_BLR_RISH">
 IUG_LOAD_BLR_RISH</A>
 <br>Queries the Kyoto_RISH server for the CSV data (uwnd, vwnd, wwnd, pwr1-5, wdt1-5)
+<LI><A HREF="iugonet/load_udas_doc_list.html#IUG_LOAD_CAMERA_OMTI_ASI">
+IUG_LOAD_CAMERA_OMTI_ASI</A>
+<br>To load the OMTI ASI data from the STEL ERG-SC site
 <LI><A HREF="iugonet/load_udas_doc_list.html#IUG_LOAD_EAR">IUG_LOAD_EAR</A>
 <br>Queries the RISH servers for all the observation data (troposphere and FAI)
 <LI><A HREF="iugonet/load_udas_doc_list.html#IUG_LOAD_EAR_IONO_EFR_NC">
@@ -207,6 +230,9 @@ IUG_LOAD_EAR_TROP_TXT</A>
 <LI><A HREF="iugonet/load_udas_doc_list.html#IUG_LOAD_EISCAT_VIEF">
 IUG_LOAD_EISCAT_VIEF</A>
 <br>loads the EISCAT vector Vi and E field data.
+<LI><A HREF="iugonet/load_udas_doc_list.html#IUG_LOAD_GMAG_MAGDAS_1SEC">
+IUG_LOAD_GMAG_MAGDAS_1SEC</A>
+<br>To load the MAGDAS geomagnetic data from the STEL ERG-SC site
 <LI><A HREF="iugonet/load_udas_doc_list.html#IUG_LOAD_GMAG_MM210">
 IUG_LOAD_GMAG_MM210</A>
 <LI><A HREF="iugonet/load_udas_doc_list.html#IUG_LOAD_GMAG_NIPR">
@@ -217,6 +243,8 @@ IUG_LOAD_GMAG_NIPR_INDUCTION</A>
 <LI><A HREF="iugonet/load_udas_doc_list.html#IUG_LOAD_GMAG_SERC">
 IUG_LOAD_GMAG_SERC</A>
 <br>This procedure allows you to download and plot MAGDAS 1-minute
+<LI><A HREF="iugonet/load_udas_doc_list.html#IUG_LOAD_GMAG_STEL_FLUXGATE">
+IUG_LOAD_GMAG_STEL_FLUXGATE</A>
 <LI><A HREF="iugonet/load_udas_doc_list.html#IUG_LOAD_GMAG_STEL_INDUCTION">
 IUG_LOAD_GMAG_STEL_INDUCTION</A>
 <br>To load STEL induction magnetometer data from the STEL ERG-SC site
@@ -325,6 +353,9 @@ IUG_LOAD_MU_IONO_TETI_NC</A>
 <LI><A HREF="iugonet/load_udas_doc_list.html#IUG_LOAD_MU_IONO_TETI_TXT">
 IUG_LOAD_MU_IONO_TETI_TXT</A>
 <br>Queries the Kyoto_RISH servers for ion and electron temperatures in text format
+<LI><A HREF="iugonet/load_udas_doc_list.html#IUG_LOAD_MU_MESO_NC">
+IUG_LOAD_MU_MESO_NC</A>
+<br>Queries the RISH servers for the standard observation data (netCDF format) of the
 <LI><A HREF="iugonet/load_udas_doc_list.html#IUG_LOAD_MU_MESO_TXT">
 IUG_LOAD_MU_MESO_TXT</A>
 <br>Queries the RISH servers for the standard observation data (CSV format) of the
@@ -346,19 +377,56 @@ IUG_LOAD_MU_RASS_TXT</A>
 <LI><A HREF="iugonet/load_udas_doc_list.html#IUG_LOAD_MU_TROP_TXT">
 IUG_LOAD_MU_TROP_TXT</A>
 <br>Queries the Kyoto_RISH servers for the standard observation data of the
+<LI><A HREF="iugonet/load_udas_doc_list.html#IUG_LOAD_RADIOSONDE_BDG_CSV">
+IUG_LOAD_RADIOSONDE_BDG_CSV</A>
+<br>Queries the Kyoto RISH server for the text data (press, temp, rh, uwnd, vwnd)
+<LI><A HREF="iugonet/load_udas_doc_list.html#IUG_LOAD_RADIOSONDE_BDG_NC">
+IUG_LOAD_RADIOSONDE_BDG_NC</A>
+<br>Queries the Kyoto RISH server for the netCDF data (press, temp, rh, uwnd, vwnd)
 <LI><A HREF="iugonet/load_udas_doc_list.html#IUG_LOAD_RADIOSONDE_DAWEX_NC">
 IUG_LOAD_RADIOSONDE_DAWEX_NC</A>
 <br>Queries the Kyoto RISH server for the netCDF data (press, temp, rh, uwnd, vwnd)
 <LI><A HREF="iugonet/load_udas_doc_list.html#IUG_LOAD_RADIOSONDE_DAWEX_TXT">
 IUG_LOAD_RADIOSONDE_DAWEX_TXT</A>
 <br>Queries the Kyoto RISH server for the text data (press, temp, rh, uwnd, vwnd)
+<LI><A HREF="iugonet/load_udas_doc_list.html#IUG_LOAD_RADIOSONDE_KTB_CSV">
+IUG_LOAD_RADIOSONDE_KTB_CSV</A>
+<br>Queries the Kyoto RISH server for the text data (press, temp, rh, uwnd, vwnd)
+<LI><A HREF="iugonet/load_udas_doc_list.html#IUG_LOAD_RADIOSONDE_KTB_NC">
+IUG_LOAD_RADIOSONDE_KTB_NC</A>
+<br>Queries the Kyoto RISH server for the netCDF data (press, temp, rh, uwnd, vwnd)
+<LI><A HREF="iugonet/load_udas_doc_list.html#IUG_LOAD_RADIOSONDE_PON_CSV">
+IUG_LOAD_RADIOSONDE_PON_CSV</A>
+<br>Queries the Kyoto RISH server for the text data (press, temp, rh, uwnd, vwnd)
+<LI><A HREF="iugonet/load_udas_doc_list.html#IUG_LOAD_RADIOSONDE_PON_NC">
+IUG_LOAD_RADIOSONDE_PON_NC</A>
+<br>Queries the Kyoto RISH server for the netCDF data (press, temp, rh, uwnd, vwnd)
 <LI><A HREF="iugonet/load_udas_doc_list.html#IUG_LOAD_RADIOSONDE_RISH">
 IUG_LOAD_RADIOSONDE_RISH</A>
 <br>Queries the Kyoto_RISH servers for all the observation data taken by
 <LI><A HREF="iugonet/load_udas_doc_list.html#IUG_LOAD_RADIOSONDE_SGK_CSV">
 IUG_LOAD_RADIOSONDE_SGK_CSV</A>
 <br>Queries the Kyoto RISH server for the text data (press, temp, rh, uwnd, vwnd)
+<LI><A HREF="iugonet/load_udas_doc_list.html#IUG_LOAD_RADIOSONDE_SGK_SND">
+IUG_LOAD_RADIOSONDE_SGK_SND</A>
+<br>Queries the Kyoto RISH server for the text data (press, temp, rh, uwnd, vwnd)
+<LI><A HREF="iugonet/load_udas_doc_list.html#IUG_LOAD_RADIOSONDE_SGK_TSV">
+IUG_LOAD_RADIOSONDE_SGK_TSV</A>
+<br>Queries the Kyoto RISH server for the text data (press, temp, rh, uwnd, vwnd)
+<LI><A HREF="iugonet/load_udas_doc_list.html#IUG_LOAD_RADIOSONDE_SRP_CSV">
+IUG_LOAD_RADIOSONDE_SRP_CSV</A>
+<br>Queries the Kyoto RISH server for the text data (press, temp, rh, uwnd, vwnd)
+<LI><A HREF="iugonet/load_udas_doc_list.html#IUG_LOAD_RADIOSONDE_SRP_NC">
+IUG_LOAD_RADIOSONDE_SRP_NC</A>
+<br>Queries the Kyoto RISH server for the netCDF data (press, temp, rh, uwnd, vwnd)
+<LI><A HREF="iugonet/load_udas_doc_list.html#IUG_LOAD_RADIOSONDE_UJI_CSV">
+IUG_LOAD_RADIOSONDE_UJI_CSV</A>
+<br>Queries the Kyoto RISH server for the text data (press, temp, rh, uwnd, vwnd)
+<LI><A HREF="iugonet/load_udas_doc_list.html#IUG_LOAD_RADIOSONDE_UJI_NC">
+IUG_LOAD_RADIOSONDE_UJI_NC</A>
+<br>Queries the Kyoto RISH server for the netCDF data (press, temp, rh, uwnd, vwnd)
 <LI><A HREF="iugonet/load_udas_doc_list.html#IUG_LOAD_SDFIT">IUG_LOAD_SDFIT</A>
+<br>Load fitacf CDF files of SuperDARN as tplot variables.
 <LI><A HREF="iugonet/load_udas_doc_list.html#IUG_LOAD_SMART">IUG_LOAD_SMART</A>
 <LI><A HREF="iugonet/load_udas_doc_list.html#IUG_LOAD_WPR_RISH">
 IUG_LOAD_WPR_RISH</A>
@@ -366,26 +434,26 @@ IUG_LOAD_WPR_RISH</A>
 <LI><A HREF="iugonet/tools/mddb_udas_doc_list.html#IUG_MAKEQUERY_MDDB">
 IUG_MAKEQUERY_MDDB</A>
 <br>Make a query for IUGONET metadata databese.
-<LI><A HREF="iugonet/load_udas_doc_list.html#IUG_MOVIE_SMART">IUG_MOVIE_SMART
+<LI><A HREF="iugonet/plot_udas_doc_list.html#IUG_MOVIE_SMART">IUG_MOVIE_SMART
 </A>
 <LI><A HREF="iugonet/tools/mddb_udas_doc_list.html#IUG_PARSEXML_MDDB">
 IUG_PARSEXML_MDDB</A>
 <br>Parses XML file and extract information.
-<LI><A HREF="iugonet/load_udas_doc_list.html#IUG_PLOT2D_EAR_FAI">
+<LI><A HREF="iugonet/plot_udas_doc_list.html#IUG_PLOT2D_EAR_FAI">
 IUG_PLOT2D_EAR_FAI</A>
 <br>Generate several 2-D plots from the FAI f-region observation data taken by the EAR.
-<LI><A HREF="iugonet/load_udas_doc_list.html#IUG_PLOT2D_IONOGRAM">
+<LI><A HREF="iugonet/plot_udas_doc_list.html#IUG_PLOT2D_IONOGRAM">
 IUG_PLOT2D_IONOGRAM</A>
 <br>Generate several ionogram plots from the ionogram data taken by the ionosonde.
-<LI><A HREF="iugonet/load_udas_doc_list.html#IUG_PLOT2D_IRIO">IUG_PLOT2D_IRIO
+<LI><A HREF="iugonet/plot_udas_doc_list.html#IUG_PLOT2D_IRIO">IUG_PLOT2D_IRIO
 </A>
-<LI><A HREF="iugonet/load_udas_doc_list.html#IUG_PLOT2D_MU_FAI">
+<LI><A HREF="iugonet/plot_udas_doc_list.html#IUG_PLOT2D_MU_FAI">
 IUG_PLOT2D_MU_FAI</A>
 <br>Generate several 2-D plots from the FAI f-region observation data taken by the MU radar.
-<LI><A HREF="iugonet/load_udas_doc_list.html#IUG_PLOT2D_RADIOSONDE">
+<LI><A HREF="iugonet/plot_udas_doc_list.html#IUG_PLOT2D_RADIOSONDE">
 IUG_PLOT2D_RADIOSONDE</A>
 <br>Generate several height profiles from the radiosonde data.
-<LI><A HREF="iugonet/load_udas_doc_list.html#IUG_PLOT2D_SMART">IUG_PLOT2D_SMART
+<LI><A HREF="iugonet/plot_udas_doc_list.html#IUG_PLOT2D_SMART">IUG_PLOT2D_SMART
 </A>
 <LI><A HREF="iugonet/tools/mddb_udas_doc_list.html#IUG_PLOTMAP_OBS">
 IUG_PLOTMAP_OBS</A>
@@ -402,17 +470,30 @@ IUG_UI_LOAD_DATA_LOAD_PRO</A>
 <LI><A HREF="iugonet/tools/statistical_package_udas_doc_list.html#
 MANN_WHITNEY_TEST">MANN_WHITNEY_TEST</A>
 <br>Test the difference for distributions between two data sets.
+<LI><A HREF="iugonet/plot/map2d_udas_doc_list.html#MAP2D_COORD">MAP2D_COORD</A>
+<LI><A HREF="iugonet/plot/map2d_udas_doc_list.html#MAP2D_GRID">MAP2D_GRID</A>
+<LI><A HREF="iugonet/plot/map2d_udas_doc_list.html#MAP2D_INIT">MAP2D_INIT</A>
+<LI><A HREF="iugonet/plot/map2d_udas_doc_list.html#MAP2D_SET">MAP2D_SET</A>
+<LI><A HREF="iugonet/plot/map2d_udas_doc_list.html#MAP2D_TIME">MAP2D_TIME</A>
 <A NAME="LIST_N">
 <LI><A HREF="iugonet/tools/statistical_package_udas_doc_list.html#NORMALITY_TEST
 ">NORMALITY_TEST</A>
 <A NAME="LIST_O">
+<LI><A HREF="iugonet/plot_udas_doc_list.html#OVERLAY_MAP_ASI_NIPR">
+OVERLAY_MAP_ASI_NIPR</A>
 <LI><A HREF="iugonet/tools/mddb_udas_doc_list.html#OVERLAY_MAP_OBS">
 OVERLAY_MAP_OBS</A>
+<LI><A HREF="iugonet/plot_udas_doc_list.html#OVERLAY_MAP_THMASI">
+OVERLAY_MAP_THMASI</A>
 <A NAME="LIST_P">
+<LI><A HREF="iugonet/plot_udas_doc_list.html#PLOT_MAP_ASI_NIPR">
+PLOT_MAP_ASI_NIPR</A>
 <LI><A HREF="iugonet/tools/statistical_package/coherence_analysis/cross_spectrum_udas_doc_list.html#
 PLUS">PLUS</A>
 <br>This function returns 1 if the input is positive, 0 otherwise.
 <A NAME="LIST_S">
+<LI><A HREF="iugonet/plot_udas_doc_list.html#SCALE_IMAGE_VALUES">
+SCALE_IMAGE_VALUES</A>
 <LI><A HREF="iugonet/gui_udas_doc_list.html#SHOW_ACKNOWLEDGEMENT">
 SHOW_ACKNOWLEDGEMENT</A>
 <br>Show data usage policy for each observation data.
