--- a/iugonet/gui_udas_doc_list.html
+++ b/iugonet/gui_udas_doc_list.html
@@ -11,7 +11,7 @@ This page was created by the IDL library routine
 <CODE>mk_html_help2</CODE>.
 <br>
 <P>
-<STRONG>Last modified: </STRONG>Fri Dec 27 11:43:59 2013.<P>
+<STRONG>Last modified: </STRONG>Tue Oct 28 21:48:08 2014.<P>
  
 <HR>
  
@@ -105,8 +105,8 @@ PURPOSE:
   Generates the tab that loads iugonet data for the gui.
 
 HISTORY:
-$LastChangedBy: jwl $
-$LastChangedDate: 2013-04-29 10:20:24 -0700 (Mon, 29 Apr 2013) $
+$LastChangedBy: jimm $
+$LastChangedDate: 2014-02-11 10:52:58 -0800 (Tue, 11 Feb 2014) $
 
 Modifications:
 A. Shinbori, 02/05/2011
@@ -119,6 +119,7 @@ Y.-M. Tanaka, 16/08/2013
 A. Shinbori, 25/09/2013
 A. Shinbori, 09/10/2013
 A. Shinbori, 27/11/2013
+Y.-M. Tanaka, 05/02/2014
 
 </PRE><P>
 <STRONG>(See <A href="gui/iug_ui_load_data.pro">iugonet/gui/iug_ui_load_data.pro</A>)</STRONG><P>
@@ -137,8 +138,8 @@ PURPOSE:
   Modularized gui iugonet data loader
 
 HISTORY:
-$LastChangedBy: Y.Tanaka $
-$LastChangedDate: 2010-04-20 $
+$LastChangedBy: jimm $
+$LastChangedDate: 2014-02-11 10:52:58 -0800 (Tue, 11 Feb 2014) $
  
 Modifications:
 A. Shinbori, 12/05/2010
@@ -154,6 +155,8 @@ A. Shinbori, 24/10/2012
 A. Shinbori, 14/12/2012
 A. Shinbori, 18/02/2013
 Y.-M. Tanaka, 16/08/2013
+A. Shinbori, 07/01/2014
+Y.-M. Tanaka, 05/02/2014
 </PRE><P>
 <STRONG>(See <A href="gui/iug_ui_load_data_load_pro.pro">iugonet/gui/iug_ui_load_data_load_pro.pro</A>)</STRONG><P>
 <HR>
